# optional

./: .appveyor.yaml  .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  library.json  optional.hpp
cmake/: tl-optional-config.cmake.in
docs/: CNAME  index.md
include/tl/: optional.hpp
tests/: assignment.cpp  bases.cpp  constexpr.cpp  constructors.cpp  emplace.cpp  extensions.cpp  hash.cpp  in_place.cpp  issues.cpp  make_optional.cpp  monadic.cpp  noexcept.cpp  nullopt.cpp  observers.cpp  relops.cpp  swap.cpp
tl/: optional.hpp  optional.hpp.orig
